--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Recipes</title>
+  <title>Recipe Finder</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
